<resources>
    <string name="app_name">FoodPantry</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="login_string">Login</string>


    <!-- Registration Strings -->
    <string name="distributor_registration_description">Register new Distributor account</string>
    <string name="register_distributor_button">Register Distributor</string>
    <string name="donor_registration_description">Register new Donor account</string>
    <string name="register_donor_button">Register Donor</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="name_edit_text_hint">Name</string>
    <string name="address_edit_text_hint">Address</string>
    <string name="about_edit_text_hint">About</string>
    <string-array name="donor_type_array">
        <item>Restaurant</item>
        <item>Grocery Store</item>
        <item>Public Garden</item>
        <item>For Profit Garden</item>
        <item>Individual</item>
        <item>Other</item>
    </string-array>

    <!--Layout Strings -->
    <string name="distributor_name">Distributor Name</string>
    <string name="distributor_about">Distributor About</string>


    <!--Layout Strings -->
    <string name="inventory_item">Inventory Item</string>
    <string name="inventory_quantity">Inventory Quantity</string>
    <string name="inventory_drop_off">Inventory DropOff</string>
    <string-array name="types">
        <item>Mobile</item>
        <item>Office</item>
        <item>Home</item>
    </string-array>

</resources>
