<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DistributorRegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distributor_registration_description" />

    <EditText
        android:id="@+id/activityDistributorRegistration_emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_edit_text_hint" />

    <EditText
        android:id="@+id/activityDistributorRegistration_passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_edit_text_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/activityDistributorRegistration_nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_edit_text_hint"/>

    <EditText
        android:id="@+id/activityDistributorRegistration_addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_edit_text_hint"/>

    <EditText
        android:id="@+id/activityDistributorRegistration_aboutEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/about_edit_text_hint"/>

    <Button
        android:id="@+id/activityDistributorRegistration_registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register" />

    <ProgressBar
        android:id="@+id/activityDistributorRegistration_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>